[package]
authors = ["Igor Laborie <igor@monkeypatch.io>"]
categories = ["command-line-utilities", "encoding"]
description = "Convert HTML to PDF using a Headless Chrome browser"
documentation = "https://docs.rs/html2pdf"
edition = "2018"
keywords = ["cli", "pdf"]
license = "Apache-2.0 OR MIT"
name = "html2pdf"
repository = "https://github.com/ilaborie/html2pdf"
version = "0.6.0"

[dependencies]
anyhow = "1.0"
clap = {version = "4.1", features = ["derive"]}
dunce = "1.0"
headless_chrome = {git = "https://github.com/gistia/gistia_headless_chrome", features=["fetch"]}
humantime = "2.1"
log = "0.4"
pretty_env_logger = "0.4"
thiserror = "1.0"
urlencoding = "2.1.2"

[dev-dependencies]
assert2 = "0.3"
rstest = "0.16"
